Enhance changelog with details on XUNA AI partnership
Expanded details about the partnership with XUNA AI, emphasizing its importance and the infrastructure's reliability for service businesses. Added sections on XUNA AI's role, the significance of the partnership, and future plans.

--- a/app/(marketing)/blog/changelog-for-2024/page.mdx
+++ b/app/(marketing)/blog/changelog-for-2024/page.mdx
@@ -21,8 +21,64 @@ export default (props) => <BlogLayout blog={blog} {...props} />;
 
 ## Built on XUNA AI
 
-ACAI is built in close collaboration with XUNA AI to ensure our AI receptionists are production-grade, reliable, and designed for real businesses operating in the field.
+ACAI is built in close collaboration with XUNA AI to ensure our AI receptionists are production-grade, reliable, and designed for real service businesses operating in the field.
 
-Our partnership allows us to move fast, iterate responsibly, and deploy systems that plumbers and HVAC companies can trust to handle real customer calls.
+From day one, our goal has been simple: build AI systems that plumbers and HVAC companies can actually trust to answer real customer calls, schedule jobs accurately, and operate consistently without cutting corners. Partnering with XUNA AI allows us to do exactly that.
 
-We’re excited about what we’re building together and what this collaboration enables for the future of AI-powered customer communication.
+---
+
+## Who XUNA AI Is
+
+XUNA AI is an advanced AI infrastructure company founded by **Joud Mansour**, focused on building large-scale, reliable systems that power real-world AI applications.
+
+Their technology is designed for environments where uptime, performance, and accuracy matter — not demos, not experiments, but production systems that support real users and real businesses.
+
+By working directly with XUNA AI, ACAI is able to build on a foundation that prioritizes stability, scalability, and responsible deployment.
+
+---
+
+## Why This Partnership Matters
+
+Building AI for service businesses requires more than just good models. It requires infrastructure that can handle live conversations, real customer expectations, and unpredictable call flows without failure.
+
+Our partnership with XUNA AI allows us to:
+- Move fast without sacrificing reliability
+- Iterate responsibly on live systems
+- Deploy AI receptionists that are truly production-ready
+- Focus on real outcomes, not prototypes
+
+This collaboration ensures ACAI’s systems are engineered to perform under real operational conditions.
+
+---
+
+## Trusted Infrastructure, Proven at Scale
+
+XUNA AI’s underlying technology is trusted by teams and organizations working with some of the most demanding platforms in the world, including:
+
+**NVIDIA, Google, Capsule, Luma, Smartcat, Hilton, Zillow, and GoTiger**
+
+This level of trust speaks to the quality and resilience of the infrastructure powering ACAI — giving our customers confidence that our systems are built on technology proven at scale.
+
+---
+
+## Our Role as ACAI
+
+While XUNA AI provides the foundational technology, ACAI operates independently as a product company focused specifically on plumbers and HVAC businesses.
+
+We design, deploy, and manage AI receptionists tailored to the workflows, call patterns, and customer expectations of service-based companies. Our focus is execution, reliability, and delivering measurable value to the businesses that rely on us every day.
+
+---
+
+## Looking Ahead
+
+We’re excited about what we’re building together.
+
+As ACAI continues to grow, our collaboration with XUNA AI enables us to expand responsibly, improve system intelligence, and maintain the level of reliability that service businesses expect.
+
+This partnership allows us to focus on what matters most: helping plumbers and HVAC companies never miss another call.
+
+---
+
+## Team Photo Coming Soon
+
+We’ll be sharing more about the people behind ACAI and our collaboration with XUNA AI soon.
