--- a/app/(marketing)/blog/top-5-llm-of-all-time/page.mdx
+++ b/app/(marketing)/blog/top-5-llm-of-all-time/page.mdx
@@ -1,11 +1,13 @@
 import { BlogLayout } from "@/components/blog-layout";
+import Image from "next/image";
 
 export const blog = {
-  author: { name: "Chris Moreno" },
+  author: { name: "Chris Moreno", src: "/headshotchris.jpeg" },
   date: "2025-12-12",
   title: "Meet the ACAI Team",
   description:
     "Get to know the team behind ACAI AI and learn about our mission to revolutionize plumbing and HVAC businesses with intelligent automation.",
+  image: "/Meet the team phone pic.jpeg",
 };
 
 export const metadata = {
@@ -49,8 +51,16 @@ export default (props) => <BlogLayout blog={blog} {...props} />;
 
 {/* Christopher Moreno Section */}
 <div className="space-y-4 md:space-y-6">
-  {/* Profile Image Placeholder */}
-  <div className="w-24 h-24 md:w-32 md:h-32 rounded-full bg-gradient-to-br from-red-100 to-purple-100 dark:from-red-900/30 dark:to-purple-900/30 mx-auto md:mx-0"></div>
+  {/* Profile Image */}
+  <div className="w-24 h-24 md:w-32 md:h-32 rounded-full overflow-hidden mx-auto md:mx-0">
+    <Image
+      src="/headshotchris.jpeg"
+      alt="Christopher Moreno"
+      width={128}
+      height={128}
+      className="w-full h-full object-cover"
+    />
+  </div>
   
   <div>
     <h2 className="text-2xl md:text-3xl font-bold text-zinc-800 dark:text-zinc-100">Christopher Moreno</h2>
