--- a/app/(marketing)/blog/top-5-llm-of-all-time/page.mdx
+++ b/app/(marketing)/blog/top-5-llm-of-all-time/page.mdx
@@ -52,13 +52,13 @@ export default (props) => <BlogLayout blog={blog} {...props} />;
 {/* Christopher Moreno Section */}
 <div className="space-y-4 md:space-y-6">
   {/* Profile Image */}
-  <div className="w-24 h-24 md:w-32 md:h-32 rounded-full overflow-hidden mx-auto md:mx-0">
+  <div className="w-24 h-24 md:w-32 md:h-32 rounded-full overflow-hidden mx-auto md:mx-0 aspect-square">
     <Image
       src="/headshotchris.jpeg"
       alt="Christopher Moreno"
       width={128}
       height={128}
-      className="w-full h-full aspect-square object-cover object-[center_15%]"
+      className="w-full h-full aspect-square object-cover object-[center_10%]"
     />
   </div>
   
