final upward shift for headshot and author revert to ACAI TEAM.

--- a/app/(marketing)/blog/changelog-for-2024/page.mdx
+++ b/app/(marketing)/blog/changelog-for-2024/page.mdx
@@ -1,7 +1,7 @@
 import { BlogLayout } from "@/components/blog-layout";
 
 export const blog = {
-  author: { name: "Chris Moreno", src: "/Meet the team phone pic.jpeg" },
+  author: { name: "ACAI Team", src: "/Meet the team phone pic.jpeg" },
   date: "2024-07-14",
   title: "Built on XUNA AI",
   description:
