--- a/app/(marketing)/blog/top-5-llm-of-all-time/page.mdx
+++ b/app/(marketing)/blog/top-5-llm-of-all-time/page.mdx
@@ -58,7 +58,7 @@ export default (props) => <BlogLayout blog={blog} {...props} />;
       alt="Christopher Moreno"
       width={128}
       height={128}
-      className="w-full h-full aspect-square object-cover object-[center_45%] scale-125"
+      className="w-full h-full aspect-square object-cover object-top scale-150 -translate-y-4"
     />
   </div>
   
