Fix headshot vertical positioning (80% shift) and revamp Voice Demo UX with gradient text, dynamic subtitles, and loading glow

--- a/app/(marketing)/blog/top-5-llm-of-all-time/page.mdx
+++ b/app/(marketing)/blog/top-5-llm-of-all-time/page.mdx
@@ -58,7 +58,7 @@ export default (props) => <BlogLayout blog={blog} {...props} />;
       alt="Christopher Moreno"
       width={128}
       height={128}
-      className="w-full h-full aspect-square object-cover object-[center_20%] scale-150"
+      className="w-full h-full aspect-square object-cover object-[center_80%]"
     />
   </div>
   
